--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 2</h2>
-            <p>Texto do artigo 2</p>
+            <h2>Curso HTML5 e CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi beatae, voluptas non, corporis quae temporibus libero nam placeat quaerat illo a vel. Dolorem et labore fuga obcaecati quasi repellat quod.</p>
         </article>
         <article>
-            <h2>Artigo 3</h2>
-            <p>Texto do artigo 3</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, assumenda possimus! Fuga ea asperiores molestias odit, sapiente voluptates impedit repudiandae rem quibusdam debitis, quod fugit doloremque fugiat aut eligendi. Doloribus?</p>
         </article>
     </main>
 </body>
